methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:3: error: ')' expected but ';' found.
  for (i <- 1 to 6) {if (estSurBiscuit() {vuBaggle=true};avance())}
                                                        ^MethodsReturning:3: error: ';' expected but ')' found.
  for (i <- 1 to 6) {if (estSurBiscuit() {vuBaggle=true};avance())}
                                                                 ^