methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBaggle : Boolean = false
  for (i <- 1 to 6) {if (estSurBiscuit() {vuBaggle=true};avance())}
  recule();recule();recule();recule();recule();recule()
  return vuBaggle
}